--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+      background:#018DED url(https://static.pexels.com/photos/251603/pexels-photo-251603.jpeg);
       background-size:cover;
       font-family:'helvetica neue';
       text-align: center;
@@ -72,13 +72,13 @@
     }
 
     .min-hand {
-      width: 45%;
-      left: 5%;
+      width: 42%;
+      left: 8%;
     }
 
     .hour-hand {
-      width: 40%;
-      left: 10%;
+      width: 37%;
+      left: 13%;
     }
 
   </style>
