change the picture for a smaller resolution

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <style>
     html {
-      background:#018DED url(https://static.pexels.com/photos/251603/pexels-photo-251603.jpeg);
+      background:#018DED url(https://images.pexels.com/photos/251603/pexels-photo-251603.jpeg?w=940&h=650&auto=compress&cs=tinysrgb);
       background-size:cover;
       font-family:'helvetica neue';
       text-align: center;
