change clock hands color

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     .hand {
       height:6px;
-      background:black;
+      background: white;
       position: absolute;
       top:50%;
       transform-origin: 100%;
